src-core/src/components/widget-footer/widget-footer.scss
@import "../../theme/theme";

:host {
  position: relative;
  padding: $spacing-small;
  font-size: 20px;
  min-height: 40px;
  border-top: 1px solid $divider-color;
  // @include display-flex();
  @include align-items(center);
  @include display-flex();

  .flex{
    @include flex();
  }
}
:host(.card){
  border-top: none;
}

